# backend

./: .gitignore  pyproject.toml  requirements.txt  start_daphne.sh
accounts/: models.py
accounts/migrations/: 0003_user_role.py  0004_remove_user_role.py
api/: admin.py  cache_utils.py  compression.py  font_injector.py  models.py  serializers.py  serializers_BASE_77872.py  signals.py  storage_backends.py  svg_parser.py  svg_sync.py  svg_updater.py  svg_utils.py  tests.py  urls.py  utils.py  watermark.py
api/migrations/: 0030_tool_price.py  0031_alter_sitesettings_options_and_more.py  0032_purchasedtemplate_svg_patches.py  0033_alter_purchasedtemplate_form_fields_and_more.py  0034_sitesettings_disable_deposits_and_more.py  0035_sitesettings_funding_whatsapp_number.py  0036_sitesettings_whatsapp_community_link_and_more.py  0037_sitesettings_tiktok_link.py
api/serializers/: __init__.py  admin.py  base.py  purchases.py  templates.py
api/views/: __init__.py  actions.py  admin.py  purchases.py  settings.py  templates.py
scripts/: diagnose_media.py  migrate_to_b2.py  reupload_media.py  test_regex.py  test_svg_opt.py  test_svg_opt_safe.py  update_b2_metadata.py  upload_missing_file.py
serverConfig/: settings.py
wallet/: views.py
